Minor fixes and improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ set(PROJECT_SOURCES
     src/renderpass.h
     src/renderpass.cpp
     src/renderer.cpp
-    src/scene.h
+    src/inputmanager.h
+    src/inputmanager.cpp
 
     resources.qrc
     resources/shaders/zpass.vert
@@ -47,7 +48,6 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(blocks
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        src/inputmanager.h src/inputmanager.cpp
     )
 endif()
 
